syntax = "proto3";

                 package employeeStat;
service EmployeeStatService {
 rpc createEmployeeStat (EmployeeStatCreateInput) returns (EmployeeStat) {}
rpc employeeStats (findManyParams) returns (stream EmployeeStat) {}
rpc employeeStat (EmployeeStatWhereUniqueInput) returns (EmployeeStat) {}
rpc updateEmployeeStat (EmployeeStatUpdateInput) returns (EmployeeStat) {}
rpc deleteEmployeeStat (EmployeeStatWhereUniqueInput) returns (EmployeeStat) {} 
 }
message EmployeeStatCreateInput {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message EmployeeStat {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message EmployeeStatWhereUniqueInput {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message EmployeeStatUpdateInput {
int32 averageOrderAmount = 1;
int32 averageOrderDuration = 2;
int32 averageRating = 3;
int32 averageServiceTime = 4;
int32 canceledOrdersCount = 5;
int32 cardPaymentsAmount = 6;
int32 cashPaymentsAmount = 7;
int32 consistencyScore = 8;
int32 conversionRate = 9;
string createdAt = 10;
int32 currentMonthOrders = 11;
int32 currentMonthRevenue = 12;
int32 efficiencyChangePercent = 13;
int32 efficiencyRate = 14;
int32 efficiencyScore = 15;
string efficiencyTrend = 16;
int32 executionRate = 17;
int32 fillRate = 18;
string id = 19;
string lastOrderAt = 20;
int32 negativeReviews = 21;
int32 ordersChangePercent = 22;
int32 ordersGrowthRate = 23;
int32 ordersPerDay = 24;
string ordersTrend = 25;
int32 overtimeCount = 26;
int32 peakHoursOrders = 27;
int32 peakPerformanceRate = 28;
int32 performanceChangePercent = 29;
int32 performanceScore = 30;
string performanceTrend = 31;
int32 positiveReviews = 32;
int32 prevMonthEfficiencyRate = 33;
int32 prevMonthPerformanceScore = 34;
int32 prevMonthTotalOrders = 35;
int32 prevMonthTotalRevenue = 36;
int32 previousMonthOrders = 37;
int32 previousMonthRevenue = 38;
int32 qualityScore = 39;
int32 rating = 40;
int32 ratingChangePercent = 41;
string ratingTrend = 42;
int32 revenueChangePercent = 43;
int32 revenueGrowthRate = 44;
int32 revenuePerHour = 45;
string revenueTrend = 46;
int32 servicesChangePercent = 47;
int32 servicesGrowthRate = 48;
int32 servicesPerHour = 49;
string servicesTrend = 50;
int32 totalDowntimeHours = 51;
int32 totalExecutionTime = 52;
int32 totalIdleTime = 53;
int32 totalOrders = 54;
int32 totalRatings = 55;
int32 totalRevenue = 56;
int32 totalServices = 57;
int32 totalWorkTime = 58;
int32 totalWorkedHours = 59;
string updatedAt = 60;
int32 utilizationRate = 61;
int32 workloadPercentage = 62;
int32 yearToDateOrders = 63;
int32 yearToDateRevenue = 64;
int32 yearToDateServices = 65;
};
message findManyParams {

};